[build-system]
requires = ["scikit-build-core", "swig", "numpy", "scipy"]
build-backend = "scikit_build_core.build"

[project]
name = "medcoupling"
version = "10.0.0"
requires-python = ">= 3.8"
dependencies = ["numpy<2", "scipy"]

[tool.scikit-build]
cmake.verbose = true
logging.level = "INFO"
wheel.packages = []

[tool.scikit-build.cmake.define]
CMAKE_PROJECT_TOP_LEVEL_INCLUDES = "ext/cmake-conan/conan_provider.cmake"
CMAKE_INSTALL_RPATH_USE_LINK_PATH = "ON"
